--- a/checkstyle/pom.xml
+++ b/checkstyle/pom.xml
@@ -8,22 +8,8 @@
 	</parent>
 	<groupId>es.dogmaweb.tools.ci</groupId>
 	<artifactId>checkstyle</artifactId>
-	
-	<properties>
-		<checkstyle.config.location>rules/checkstyle.xml</checkstyle.config.location>
-	</properties>
+	<packaging>jar</packaging>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.9.1</version>
-				<configuration>
-				</configuration>
-			</plugin>
-		</plugins>
 	</build>
-
-
 </project>
